--- a/myfront/src/App.css
+++ b/myfront/src/App.css
@@ -4,7 +4,7 @@
   margin-top: 10vh;
   margin-bottom: 10vh;
   height: 600px;
-  width: 800px;
+  width: 900px;
 
   display: flex;
   flex-direction: column;
@@ -13,15 +13,15 @@
 .Gray-block {
   background-color: rgb(103, 103, 103);
   height: 30px;
-  width: 800px;
+  width: 900px;
   flex-grow: 1;
   display: flex;
   justify-content: space-between;
 }
 
 .Records {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
+  grid-template-rows: repeat(10, 50px);
   flex-grow: 30;
 }
