--- a/myfront/src/App.css
+++ b/myfront/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-color: rgb(210, 210, 210);
+  background-color: rgba(210, 210, 210, 0);
   margin: auto;
   margin-top: 10vh;
   margin-bottom: 10vh;
@@ -24,4 +24,22 @@
   grid-template-columns: repeat(2, 50%);
   grid-template-rows: repeat(10, 50px);
   flex-grow: 30;
+}
+
+.link {
+	align-self: end;
+
+	white-space: nowrap;
+    font-size: 13px;
+    line-height: 23px;
+    color: rgba(255, 255, 255, 0.8);
+    padding: 0 10px;
+	margin-top: 5px;
+    height: 23px;
+    background-color: rgba(0, 0, 0, 0.6);
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    border-radius: 9px;
+    margin-right: 5px;
+	text-decoration: none;
 }
